app/javascript/src/styles/specific/notes.scss
div#note-container {
  position: absolute;
  z-index: 50;

  div.note-body {
    position: absolute;
    border: var(--note-body-border);
    background: var(--note-body-background);
    color: var(--note-body-text-color);
    min-width: 140px;
    min-height: 1em;
    line-height: normal;
    cursor: pointer;
    padding: 4px;
    z-index: 150;
    overflow: auto;
  }

  div.note-body, div.note-box.embedded div.note-box-inner-border {
    h1, h2, h3, h4, h5, h6, a, span, div, blockquote, br, p, ul, li, ol, em, strong, small, big, b, i, font, u, s, code, center {
      line-height: normal;
    }

    > :last-child {
      margin-bottom: 0;
    }

    b, strong {
      font-weight: bold;
    }

    i, em {
      font-style: italic;
    }

    small {
      font-size: 0.8em;
    }

    .tn {
      font-size: 0.8em;
      color: var(--note-tn-color);
    }

    ruby {
      rt {
        font-size: 0.8em;
      }
    }

    ul {
      margin-left: 1em;
      margin-bottom: 1em;

      ul {
        margin-bottom: 0;
      }

      li {
        list-style-type: disc;

        + br {
          display: none;
        }
      }
    }
  }

  div.note-box {
    position: absolute;
    border: var(--note-box-border);
    min-width: 5px;
    min-height: 5px;
    width: 100px;
    height: 100px;
    cursor: move;
    background: var(--note-box-background);
    line-height: normal;

    div.note-box-inner-border {
      border: var(--note-box-inner-border);
      background: var(--note-body-background);
    }

    div.note-box-inner-border.unsaved {
      border: var(--unsaved-note-box-inner-border);
    }

    &.embedded {
      color: var(--note-body-text-color);

      div.bg {
        height: 100%;
        text-align: center;
        display: table-cell;
        vertical-align: middle;
      }

      div.note-box-inner-border {
        text-align: center;
        display: table-cell;
        vertical-align: middle;
      }
    }

    &.note-box-highlighted {
      outline: 2px solid var(--note-highlight-color);
    }
  }
}

div#note-preview {
  position: absolute;
  border: var(--note-preview-border);
  opacity: 0.6;
  display: none;
  background: var(--note-preview-background);
}

div.note-edit-dialog {
  font-size: 0.8em;
}

